<resources>
    <string name="app_name">WallApp</string>
    <string name="loading">Loading…</string>
    <string name="error_loading">Error loading page</string>
    <string name="no_internet">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="download_started">Download started</string>
    <string name="download_failed">Download failed</string>
    <string name="permission_required">Storage permission required for downloading wallpapers</string>
    <string name="link_copied">Link copied</string>
    <string name="set_your_wallpaper">Set Your Wallpaper</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both_screens">Both</string>
    <string name="set_as">Set as</string>
    <string name="app_actions">App actions</string>
    <string name="share_page">Share page</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_link">Copy link</string>
    <string name="clear_cache">Clear cache</string>
    <string name="about_wallapp">About WallApp</string>
    <string name="cache_cleared">Cache cleared</string>
</resources>
